@@ -35,6 +35,7 @@ console-setup (1.37) UNRELEASED; urgency=low
     closes: #531478.
   * Respect the selected choices on <Go Back>.  Thanks to Frans Pop.
   * Do not ask charmap question in the udeb.  Thanks to Frans Pop.
+  * Delete .cvsignore and .svn in all udebs.
 
  -- Otavio Salvador <otavio@ossystems.com.br>  Wed, 20 May 2009 09:02:48 -0300
 
